# jeeadv_2024

./: 4year_branches.json  5year_branches.json  README.md  cities.json  institutes.json  main.py  pyproject.toml  seat_matrix.py  webscraper.py
exported_data/csv/: ORCR.csv  README.md  allotment.csv  branches.csv  choices.csv  programme.csv  seat_matrix_25.csv  total_seats.csv
exported_data/excel/: JIC24_choice count.xlsx  ORCR.xlsx  README.md  allotment.xlsx  choices.xlsx  combined.xlsx  josaa24.xlsx  programme_seats.xlsx  seat_matrix_25.xlsx  total_seats.xlsx
exported_data/stats/: foreign_students_choice.csv  institute_wise_state_count.csv  stat.csv  state_wise_allotment_percentage.csv  state_wise_count.csv  state_wise_institute_count.csv
