[tool.poetry]
name = "jeeadv-2024"
version = "0.1.0"
description = ""
authors = ["Quantum-Codes <87054411+Quantum-Codes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
